# yew-web-demo

./: Cargo.toml  index.html  readme.md
src/: lib.rs  main.rs
src/pages/: app.rs  counter.rs  display.rs  hello.rs  home.rs  layout.rs  mod.rs  movie.rs  router.rs  store.rs  test.rs
