[package]
name = "yew-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]




gloo = "0.8.0"
serde = "1.0.141"
serde_json = "1.0.82"
stylist = { version= "0.10.1",features=["yew"]}
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.32"
wasm-bindgen = "0.2.82"
web-sys = {version="0.3.59",features=["HtmlInputElement"]}

yew = "0.19.3"
yew-router = "0.16.0"
yewdux = "0.7.0"



# yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
# yew-router = { git = "https://github.com/yewstack/yew.git" }
# yewdux = { git = "https://github.com/intendednull/yewdux" }